use detected compiler in ErrorAnnotator (#351)